WIP validari si html-uri si pe mamaliga lor

--- a/src/templates/R/02_cibs.html
+++ b/src/templates/R/02_cibs.html
@@ -238,6 +238,7 @@
                 <div>{{T0072}}. {{T0073}}</div>
                 <div>
                     <select id="lk12" name="lk12" class="selectclass">
+                        <option value="-9">{{T1337}}</option>
                         <option value="{{lk12-1}}">{{T0074}}</option>
                         <option value="{{lk12-2}}">{{T0075}}</option>
                         <option value="{{lk12-3}}">{{T0076}}</option>
@@ -760,6 +761,7 @@
                 <div>{{T0220}}. {{T0221}}</div>
                 <div>
                     <select id="cm4" name="cm4" class="selectclass">
+                        <option value="-9">{{T1337}}</option>
                         <option value="{{cm4-1}}">{{T0222}}</option>
                         <option value="{{cm4-2}}">{{T0223}}</option>
                         <option value="{{cm4-3}}">{{T0224}}</option>
@@ -1269,6 +1271,7 @@
                 <div>{{T0356}}. {{T0357}}</div>
                 <div>
                     <select id="ct4" name="ct4" class="selectclass">
+                        <option value="-9">{{T1337}}</option>
                         <option value="{{ct4-1}}">{{T0358}}</option>
                         <option value="{{ct4-2}}">{{T0359}}</option>
                         <option value="{{ct4-3}}">{{T0360}}</option>
@@ -1747,6 +1750,7 @@
                 <div>{{T0494}}. {{T0495}}</div>
                 <div>
                     <select id="cg4" name="cg4" class="selectclass">
+                        <option value="-9">{{T1337}}</option>
                         <option value="{{cg4-1}}">{{T0496}}</option>
                         <option value="{{cg4-2}}">{{T0497}}</option>
                         <option value="{{cg4-3}}">{{T0498}}</option>
