--- a/src/templates/R/05_yplcs.html
+++ b/src/templates/R/05_yplcs.html
@@ -180,7 +180,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="divclass">
                 <div>{{T0053}}. {{T0054}}</div>
                 <div>
                     <select id="pi4b" name="pi4b" class="selectclass">
@@ -189,7 +189,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="divclass">
                 <div>{{T0056}}. {{T0057}}</div>
                 <div>
                     <select id="pi4c" name="pi4c" class="selectclass">
@@ -197,7 +197,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="divclass">
                 <div>PI4d. {{T0591}}</div>
                 <div>
                     <select id="pi4d" name="pi4d" class="selectclass">
@@ -209,56 +209,28 @@
 
             <input type="hidden" id="pi4e" name="pi4e" />
 
-
             <div class="divclass mt-6">
-                <div class="col-span-1">{{T0059}}. {{T0060}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
-                    <div class="flex items-center">
-                        <input id="pi5-1" type="radio" value="{{pi5-1}}" name="pi5" class="valueclass" />
-                        <label for="pi5-1" class="labelclass">{{T0061}}</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-2" type="radio" value="{{pi5-2}}" name="pi5" class="valueclass" />
-                        <label for="pi5-2" class="labelclass">{{T0062}}</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-3" type="radio" value="{{pi5-3}}" name="pi5" class="valueclass" />
-                        <label for="pi5-3" class="labelclass">{{T0063}}</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-4" type="radio" value="{{pi5-4}}" name="pi5" class="valueclass" />
-                        <label for="pi5-4" class="labelclass">{{T0064}}</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-5" type="radio" value="{{pi5-5}}" name="pi5" class="valueclass" />
-                        <label for="pi5-5" class="labelclass">{{T0065}}</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-6" type="radio" value="{{pi5-6}}" name="pi5" class="valueclass" />
-                        <label for="pi5-6" class="labelclass">{{T0066}}</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-7" type="radio" value="{{pi5-7}}" name="pi5" class="valueclass" />
-                        <label for="pi5-7" class="labelclass">{{T0067}}</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-8" type="radio" value="{{pi5-8}}" name="pi5" class="valueclass" />
-                        <label for="pi5-8" class="labelclass">{{T0068}}</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-9" type="radio" value="{{pi5-9}}" name="pi5" class="valueclass" />
-                        <label for="pi5-9" class="labelclass">{{T0069}}</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-10" type="radio" value="{{pi5-10}}" name="pi5" class="valueclass" />
-                        <label for="pi5-20" class="labelclass">{{T0070}}</label>
-                    </div>
+                <div>{{T0059}}. {{T0060}}</div>
+                <div>
+                    <select id="lk12" name="lk12" class="selectclass">
+                        <option value="-9">{{T0597}}</option>
+                        <option value="{{lk12-1}}">{{T0061}}/option>
+                        <option value="{{lk12-2}}">{{T0062}}/option>
+                        <option value="{{lk12-3}}">{{T0063}}/option>
+                        <option value="{{lk12-4}}">{{T0064}}/option>
+                        <option value="{{lk12-5}}">{{T0065}}/option>
+                        <option value="{{lk12-6}}">{{T0066}}/option>
+                        <option value="{{lk12-7}}">{{T0067}}/option>
+                        <option value="{{lk12-8}}">{{T0068}}/option>
+                        <option value="{{lk12-9}}">{{T0069}}/option>
+                        <option value="{{lk12-10}}">{{T0070}}/option>
+                    </select>
                 </div>
             </div>
 
             <p class="mt-6"><br>{{T0593}}</b></p>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="divclass">
                 <div>PI6r. {{T0054}}</div>
                 <div>
                     <select id="pi6r" name="pi6r" class="selectclass">
@@ -267,7 +239,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="divclass">
                 <div>PI6d. {{T0057}}</div>
                 <div>
                     <select id="pi6d" name="pi6d" class="selectclass">
@@ -347,19 +319,11 @@
                         <input id="pi10a-3" type="radio" value="{{pi9a-3}}" name="pi9a" class="valueclass" />
                         <label for="pi10-3" class="labelclass">{{T0104}}</label>
                     </div>
-                    <div class="flex items-center">
-                        <input id="pi10a-4" type="radio" value="{{pi9a-4}}" name="pi9a" class="valueclass" />
-                        <label for="pi10-4" class="labelclass">{{T0105}}</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi10a-5" type="radio" value="{{pi9a-5}}" name="pi9a" class="valueclass" />
-                        <label for="pi10-5" class="labelclass">{{T0106}}</label>
-                    </div>
                 </div>
             </div>
 
             <p>{{T0107}}</p>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="divclass">
                 <div class="ml-4">{{T0109}}</div>
                 <div>
                     <select id="pi9c" name="pi9c" class="selectclass">
@@ -368,7 +332,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="divclass">
                 <div class="ml-4">{{T0111}}</div>
                 <div>
                     <select id="pi9d" name="pi9d" class="selectclass">
@@ -376,7 +340,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="divclass">
                 <div class="ml-4">h. {{T0591}}</div>
                 <div>
                     <select id="pi9h" name="pi9h" class="selectclass">
@@ -494,7 +458,9 @@
                     </div>
                 </div>
             </div>
+
             <p class="mt-6">{{T0146}}</p>
+
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0147}}. {{T0148}}</div>
                 <div class="col-span-1 flex flex-col gap-2">
