--- a/src/templates/R/05a_tqyp.html
+++ b/src/templates/R/05a_tqyp.html
@@ -123,9 +123,7 @@
             </div>
 
             <div class="divclass mt-4">
-                <div>
-                    OMR4. {{T0029}} <small class="block italic text-red-500">Fill in case manager if the person plays this role.</small>
-                </div>
+                <div>OMR4. {{T0029}}</div>
                 <div>
                     <input type="text" id="omr4" name="omr4" class="inputclass w-full" />
                 </div>
