--- a/src/templates/R/09_eef.html
+++ b/src/templates/R/09_eef.html
@@ -1714,6 +1714,11 @@
             <textarea placeholder="{{T0041}}" name="e59_n" id="e59_n" rows="3" class="mt-2 inputclass w-full"></textarea>
 
 
+            <div class="grid mt-10">
+                <label for="obs">{{T0111}}. {{T0112}}</label>
+                <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
+            </div>
+
         </form>
 
 
