--- a/src/templates/R/06_dsee.html
+++ b/src/templates/R/06_dsee.html
@@ -777,7 +777,7 @@
                             <input type="text" id="tsa1_g" name="tsa1_g" class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tsa1_t" name="tsa1_t" class="inlineblock" />
+                            <input type="text" id="tsa1_t" name="tsa1_t" readonly class="inlineblock" />
                         </td>
                     </tr>
                     <tr class="border-b">
@@ -789,7 +789,7 @@
                             <input type="text" id="tsa2_g" name="tsa2_g" class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tsa2_t" name="tsa2_t" class="inlineblock" />
+                            <input type="text" id="tsa2_t" name="tsa2_t" readonly class="inlineblock" />
                         </td>
                     </tr>
                     <tr class="border-b">
@@ -801,7 +801,7 @@
                             <input type="text" id="tsa3_g" name="tsa3_g" class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tsa3_t" name="tsa3_t" class="inlineblock" />
+                            <input type="text" id="tsa3_t" name="tsa3_t" readonly class="inlineblock" />
                         </td>
                     </tr>
                     <tr class="border-b">
@@ -809,10 +809,10 @@
                             <p class="block">{{T0186}}. {{T0187}}</p>
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tnr1_b" name="tnr1_b" readonly class="inlineblock" />
+                            <input type="text" id="tnr1_b" name="tnr1_b" class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tnr1_g" name="tnr1_g" readonly class="inlineblock" />
+                            <input type="text" id="tnr1_g" name="tnr1_g" class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
                             <input type="text" id="tnr1_t" name="tnr1_t" readonly class="inlineblock" />
